src/libqfiledialog.h

typedef struct QUrl QUrl;
typedef struct QWidget QWidget;
QUrl* QFileDialog_GetSaveFileUrl4(QWidget* parent, libqt_string caption, QUrl* dir, libqt_string filter);
libqt_string QFileDialog_GetExistingDirectory1(QWidget* parent);
libqt_string QFileDialog_GetExistingDirectory2(QWidget* parent, libqt_string caption);
libqt_string QFileDialog_GetExistingDirectory3(QWidget* parent, libqt_string caption, libqt_string dir);
libqt_string QFileDialog_GetExistingDirectory4(QWidget* parent, libqt_string caption, libqt_string dir, int options);
QUrl* QFileDialog_GetExistingDirectoryUrl1(QWidget* parent);
QUrl* QFileDialog_GetExistingDirectoryUrl2(QWidget* parent, libqt_string caption);
QUrl* QFileDialog_GetExistingDirectoryUrl3(QWidget* parent, libqt_string caption, QUrl* dir);
QUrl* QFileDialog_GetExistingDirectoryUrl4(QWidget* parent, libqt_string caption, QUrl* dir, int options);
QUrl* QFileDialog_GetExistingDirectoryUrl5(QWidget* parent, libqt_string caption, QUrl* dir, int options, libqt_list /* of libqt_string */ supportedSchemes);
libqt_list /* of libqt_string */ QFileDialog_GetOpenFileNames1(QWidget* parent);
libqt_list /* of libqt_string */ QFileDialog_GetOpenFileNames2(QWidget* parent, libqt_string caption);
libqt_list /* of libqt_string */ QFileDialog_GetOpenFileNames3(QWidget* parent, libqt_string caption, libqt_string dir);
libqt_list /* of libqt_string */ QFileDialog_GetOpenFileNames4(QWidget* parent, libqt_string caption, libqt_string dir, libqt_string filter);
libqt_list /* of QUrl* */ QFileDialog_GetOpenFileUrls1(QWidget* parent);
libqt_list /* of QUrl* */ QFileDialog_GetOpenFileUrls2(QWidget* parent, libqt_string caption);
libqt_list /* of QUrl* */ QFileDialog_GetOpenFileUrls3(QWidget* parent, libqt_string caption, QUrl* dir);
libqt_list /* of QUrl* */ QFileDialog_GetOpenFileUrls4(QWidget* parent, libqt_string caption, QUrl* dir, libqt_string filter);