src/libqfiledialog.bf

	[LinkName("QFileDialog_GetSaveFileUrl4")]
	public static extern QUrl QFileDialog_GetSaveFileUrl4(QWidget parent, char8[] caption, QUrl dir, char8[] filter);
	[LinkName("QFileDialog_GetExistingDirectory1")]
	public static extern char8[] QFileDialog_GetExistingDirectory1(QWidget parent);
	[LinkName("QFileDialog_GetExistingDirectory2")]
	public static extern char8[] QFileDialog_GetExistingDirectory2(QWidget parent, char8[] caption);
	[LinkName("QFileDialog_GetExistingDirectory3")]
	public static extern char8[] QFileDialog_GetExistingDirectory3(QWidget parent, char8[] caption, char8[] dir);
	[LinkName("QFileDialog_GetExistingDirectory4")]
	public static extern char8[] QFileDialog_GetExistingDirectory4(QWidget parent, char8[] caption, char8[] dir, int64 options);
	[LinkName("QFileDialog_GetExistingDirectoryUrl1")]
	public static extern QUrl QFileDialog_GetExistingDirectoryUrl1(QWidget parent);
	[LinkName("QFileDialog_GetExistingDirectoryUrl2")]
	public static extern QUrl QFileDialog_GetExistingDirectoryUrl2(QWidget parent, char8[] caption);
	[LinkName("QFileDialog_GetExistingDirectoryUrl3")]
	public static extern QUrl QFileDialog_GetExistingDirectoryUrl3(QWidget parent, char8[] caption, QUrl dir);
	[LinkName("QFileDialog_GetExistingDirectoryUrl4")]
	public static extern QUrl QFileDialog_GetExistingDirectoryUrl4(QWidget parent, char8[] caption, QUrl dir, int64 options);
	[LinkName("QFileDialog_GetExistingDirectoryUrl5")]
	public static extern QUrl QFileDialog_GetExistingDirectoryUrl5(QWidget parent, char8[] caption, QUrl dir, int64 options, char8[][] supportedSchemes);
	[LinkName("QFileDialog_GetOpenFileNames1")]
	public static extern char8[][] QFileDialog_GetOpenFileNames1(QWidget parent);
	[LinkName("QFileDialog_GetOpenFileNames2")]
	public static extern char8[][] QFileDialog_GetOpenFileNames2(QWidget parent, char8[] caption);
	[LinkName("QFileDialog_GetOpenFileNames3")]
	public static extern char8[][] QFileDialog_GetOpenFileNames3(QWidget parent, char8[] caption, char8[] dir);
	[LinkName("QFileDialog_GetOpenFileNames4")]
	public static extern char8[][] QFileDialog_GetOpenFileNames4(QWidget parent, char8[] caption, char8[] dir, char8[] filter);
	[LinkName("QFileDialog_GetOpenFileUrls1")]
	public static extern QUrl[] QFileDialog_GetOpenFileUrls1(QWidget parent);
	[LinkName("QFileDialog_GetOpenFileUrls2")]
	public static extern QUrl[] QFileDialog_GetOpenFileUrls2(QWidget parent, char8[] caption);
	[LinkName("QFileDialog_GetOpenFileUrls3")]
	public static extern QUrl[] QFileDialog_GetOpenFileUrls3(QWidget parent, char8[] caption, QUrl dir);
	[LinkName("QFileDialog_GetOpenFileUrls4")]
	public static extern QUrl[] QFileDialog_GetOpenFileUrls4(QWidget parent, char8[] caption, QUrl dir, char8[] filter);
}